evolve gruntfile to produce example demo assets

--- a/examples/example-bootstrap.less
+++ b/examples/example-bootstrap.less
@@ -16,7 +16,7 @@
 @navbarLinkColorHover:  @grayDark;
 
 */
-@import "variables.less";
+@import "../components/bootstrap/less/variables.less";
 @import "../bootstrap/slickgrid.less";
 
 .grid {
